--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,12 @@ h1 {
     line-height: 1.5;
 }
 
+h2 {
+    font-weight: 900;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 h3 {
     font-weight: 900;
 }
@@ -67,6 +73,7 @@ p {
 
 .feature-box {
     padding: 5%;
+    text-align: center;
 }
 
 .icon {
@@ -76,4 +83,32 @@ p {
 
 .icon:hover {
     color: #ff4c68;
+}
+
+/* Testimonials Section */
+
+#testimonials {
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+/* Press Section */
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
 }
