add press section and pricing section

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,11 @@ p {
 
 #features {
     padding: 7% 15%;
+    text-align: center;
 }
 
 .feature-box {
     padding: 5%;
-    text-align: center;
 }
 
 .icon {
@@ -119,4 +119,14 @@ p {
 .press-logo {
     width: 15%;
     margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-box {
+    padding: 3% 2%;
 }
